RESOLVED FIXED211842
[Web Animations] Fix refactoring issue with animation suspension following r261336
https://bugs.webkit.org/show_bug.cgi?id=211842
Summary [Web Animations] Fix refactoring issue with animation suspension following r2...
Antoine Quint
Reported 2020-05-13 07:37:33 PDT
We forgot to move the animation suspension code from the DocumentTimeline constructor up to the DocumentTimelinesController constructor in r261336.
Attachments
Patch (3.51 KB, patch)
2020-05-13 07:40 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2020-05-13 07:37:55 PDT
Antoine Quint
Comment 2 2020-05-13 07:40:33 PDT
EWS
Comment 3 2020-05-13 12:18:27 PDT
Committed r261635: <https://trac.webkit.org/changeset/261635> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399260 [details].
Note You need to log in before you can comment on or make changes to this bug.